--- a/LICENSE.html
+++ b/LICENSE.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="https://konradswierczek.github.io/Evaluating-Musical-Predictions-with-Multiple-Versions-of-a-Work/"> 
+    <a class="nav-link" href="https://swierckj.shinyapps.io/variation-between-versions/"> 
 <span class="menu-text">Interactive Data</span></a>
   </li>  
   <li class="nav-item compact">
