--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="https://konradswierczek.github.io/Evaluating-Musical-Predictions-with-Multiple-Versions-of-a-Work/"> 
+    <a class="nav-link" href="https://swierckj.shinyapps.io/variation-between-versions/"> 
 <span class="menu-text">Interactive Data</span></a>
   </li>  
   <li class="nav-item compact">
